--- a/Inform_BusRoute/app/src/main/AndroidManifest.xml
+++ b/Inform_BusRoute/app/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.univ.toyama.inform_busroute">
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" /> <!-- Bluetoothデバイスのスキャン機能を使用するためのパーミッションとして、位置情報のパーミッションがAndroid 6.0から必要になった -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
 
     <application
         android:name=".Common"
@@ -10,6 +15,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Inform_BusRoute">
+        <activity
+            android:name=".BluetoothActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DeviceListActivity"
+            android:exported="true" />
         <activity
             android:name=".Display_Times"
             android:exported="true" />
